added search js file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Weather Dashboard</title>
 
     <!-- EXTERNAL LINKS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto:100,300,400&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css" />
 
@@ -100,6 +103,9 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
     <script src="Assets/js/main.js"></script>
     <script src="Assets/js/weather.js"></script>
